--- a/justMonika.css
+++ b/justMonika.css
@@ -1,5 +1,5 @@
 body{
-background-image: url(../Autoria/fundo.png); /*imagem do plano de fundo*/
+background-image: url(../DokiDoki/imgs/fundo.png); /*imagem do plano de fundo*/
 }
 
 /*menu*/
