--- a/justMonika.css
+++ b/justMonika.css
@@ -1,6 +1,6 @@
-/*imagem do plano de fundo*/
+
 body{
-background-image: url(../DokiDoki/imgs/abismo.png); 
+background-image: url(../DokiDoki/imgs/fundo.png); /*imagem do plano de fundo*/
 }
 
 /*menu*/
