--- a/poemas.css
+++ b/poemas.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../Autoria/fundo.png);/*imagem do fundo*/
+    background-image: url(../DokiDoki/imgs/fundo.png);/*imagem do fundo*/
 }
 
 /*div do cabeçalho*/
