--- a/justyuri.css
+++ b/justyuri.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(../Autoria/fundo.png); /*imagem de fundo*/
+  background-image: url(../DokiDoki/imgs/fundo.png); /*imagem de fundo*/
 }
 
 /*cabeçalho*/
