--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 /* Definindo o fundo da página como imagem */
 body {
-    background-image: url(../Autoria/fundo.png); /* imagem de fundo */
+    background-image: url(../DokiDoki/imgs/fundo.png); /* imagem de fundo */
     background-size: cover; /* Faz com que a imagem cubra toda a tela */
     background-position: center; /* Centraliza a imagem */
 }
