--- a/justyuri.css
+++ b/justyuri.css
@@ -88,3 +88,62 @@ color: rgb(255, 193, 217); /*cor das letras*/
   padding-right: 40px;/*espacamento interno(direito)*/
   text-align: justify;/*alinhamento do texto*/
 }
+
+.navbar{
+  background-color: rgb(255, 193, 217); 
+  color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.menu{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.menu li{
+  margin-left: 20px;
+}
+
+.menu a{
+  color: white;
+  text-decoration: none;
+}
+
+.dropdown{
+  position: relative;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: rgb(255, 193, 217);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px
+  rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content li{
+  margin: 0;
+}
+
+.dropdown-content a{
+  color: #333;
+  padding: 10px;
+  display: block;
+}
