--- a/justyuri.css
+++ b/justyuri.css
@@ -2,40 +2,6 @@ body{
   background-image: url(../DokiDoki/imgs/fundo.png); /*imagem de fundo*/
 }
 
-/*titulo*/
-.titulo{
-    
-}
-
-/* div do botão voltar*/
-#volte{
-  float: right;/*desloca o elemento*/
-  height: 40px;/*altura*/
-  text-align: right;/*alinhamento do texto*/
-  padding-bottom: 5px;/*espaçamento inetrno(base)*/
-  clear: both;/*impede que outros elementos se posicionem aos seus lados(esquqqedo e direito)*/
-}
-/*botão voltar*/
-.voltar{
-  color: rgb(174, 12, 131);/*cor das letras*/
-  text-decoration: none;/*decorações do texto(sublinhado)*/
-  font-family: cursive;/*estilo da fonte*/
-  font-size: 25px;/*tamanho das letras*/
-  text-align: right;/*alinhamento do texto*/
-  float: right;/*deslocamento do elemento*/
-}
-/*botão voltar(ao passar o mause por cima*/
-.voltar:hover{
-color: rgb(255, 193, 217); /*cor das letras*/
-}
-
-/*div da imagem das personagens*/
-#meninas{
-  width: 23%;/*largura*/
-  height: 1000px;/*altura*/
-  float: left;/*deslocamento da fonte*/
-}
-
 /*imagem das personagens*/
 .s, .y, .n{
   width: 290px;/*largura*/
@@ -75,44 +41,25 @@ color: rgb(255, 193, 217); /*cor das letras*/
   align-items: center;
 }
 
-#logo{
+.logo{
     float: left;/*desloca o elemento*/
-    width: 110px;/*largura*/
-    height: 110px;/*altura*/
+    width: 50px;/*largura*/
+    height: 50px;/*altura*/
     position: static;/*como a imagem se comporta*/
-    padding-top: 1px;/*espaçamento interno(topo)*/
-    padding-bottom: 20px;/*espaçamento inetrno(base)*/
-}
-
-
-.menu{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  font-family:cursive;/*estilo da fonte*/
-  font-size: 37px;/*tamanho da letras*/
-  text-align: center;/*alinhamneto do texto*/
 }
 
 .apersonagens{
   font-family:cursive;/*estilo da fonte*/
-    font-size: 37px;/*tamanho da letras*/
-    text-align: center;/*alinhamneto do texto*/
-    padding-right: 50%;/*espaçamento interno(direita)*/
-    padding-left: 42%;/*espacamento interno(esquerda)*/
+  font-size: 37px;/*tamanho da letras*/
+  text-align: center;/*alinhamneto do texto*/
+  float: left;
 }
-/*.menu li{
-  margin-left: 20px;
-}*/
-
 
 .dropdown{
   position: relative;
 }
 
 .dropdown-content{
-  color: white;
   display: none;
   position: absolute;
   background-color: rgb(255, 193, 217);
@@ -122,14 +69,21 @@ color: rgb(255, 193, 217); /*cor das letras*/
   z-index: 1;
 }
 
-.dropdown:hover, .dropdown-content {
-  display: block;
-  background-color: rgb(255, 193, 217);
-  color: rgb(174, 12, 131);
+.poemas, .trailer, .votar, .voltar{
+  font-size: 30px;/*tamanho da fonte*/
+  line-height: 67px;/*espacamneto entre linhas*/
+  list-style-type: none;/*retirar marcações(bolinhas)*/
+  text-decoration: none;
+  color: white;
+}
+
+.poemas:hover, .trailer:hover, .votar:hover, .voltar:hover{
+  color: rgb(174, 12, 131);/*cor das letras*/
 }
 
 .menuSuspenso{
-  color:rgb(255, 193, 217);
+  color:white;
   font-family: cursive;
+  font-size: 30px;
 }
 
