--- a/justyuri.css
+++ b/justyuri.css
@@ -41,7 +41,7 @@ body{
   align-items: center;
 }
 
-.logo{
+.LOGOS{
     width: 15px;/*largura*/
     height: 15px;/*altura*/
     position: static;/*como a imagem se comporta*/
