--- a/justyuri.css
+++ b/justyuri.css
@@ -2,6 +2,48 @@ body{
   background-image: url(../DokiDoki/imgs/fundo.png); /*imagem de fundo*/
 }
 
+/*div do cabeçalho*/
+#cabeca{
+  background-color: rgb(255, 193, 217);/*cor do fundo*/
+  height: 100px;/*altura*/
+  text-align: center;/*alinhamento do texto*/
+  color: white;/*cor das letras*/
+  clear: both;/*impede que outros elementos se posicionem aos seus lados(esquqqedo e direito)*/
+  padding: 20px; /*espacamento interno*/
+}
+
+/*imagem logo*/
+.logo{
+  float: left;/*deslocamento do elemento*/
+  width: 110px;/*largura*/
+  height: 110px;/*altura*/
+  position: static;/*como a imagem se comporta*/
+  padding-top: 1px;/*espaçamento interno(topo)*/
+  padding-bottom: 20px;/*espaçamento interno(base)*/
+}
+
+/*botão voltar*/
+.voltar{
+  color: rgb(174, 12, 131);/*cor das letras*/
+  text-decoration: none;/*decoração do texto(sublinhado)*/
+  font-family: cursive;/*estilo de fonte*/
+  font-size: 25px;/*tamanho da fonte*/
+  text-align: right;/*alinhamento do texto*/
+  float: right;/*deslocamento do elemento*/
+}
+/*botão voltar(ao passar mause por cima)*/
+.voltar:hover{
+  color: rgb(255, 193, 217); /*cor das letras*/
+}
+
+/*titulo*/
+.titulo{
+  font-family:cursive;/*estilo de fonte*/
+  font-size: 37px; /*tamanho das letras*/
+  margin-right: 0px;/*margem(direita)*/
+  padding-right: 0px;/*espaçamento interno(direita)*/
+}
+
 /*imagem das personagens*/
 .s, .y, .n{
   width: 290px;/*largura*/
@@ -32,74 +74,7 @@ body{
   text-align: justify;/*alinhamento do texto*/
 }
 
-.navbar{
-  background-color: rgb(255, 193, 217); 
-  color: white;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
-.LOGOS{
-    width: 15px;/*largura*/
-    height: 15px;/*altura*/
-    position: static;/*como a imagem se comporta*/
-}
-
-.nav-menu{
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-.nav-item-dropdown{
-  color: white;
-  font-family: cursive;
-  font-size: 15px;
-}
-
-.dropdowm-menu{
-  font-family: cursive;
-  color: white;
-  font-size: 15px;
-}
-
-.nav-item-link{
-  font-family: cursive;
-  color: white;
-  font-size: 15px;
-}
-
-
-/*.dropdown{
-  position: relative;
-}
-
-.dropdown-content{
-  display: none;
-  position: absolute;
-  background-color: rgb(255, 193, 217);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px
-  rgb(255, 193, 217);  
-  z-index: 1;
-}
-
-.dropdown:hover, .dropdown-content{
-  display: block;
-}
-
-.dropdown-content li{
-  margin: 0;
-}
-
-.dropdown-content a{
-  color: white;
-  padding: 10px;
-  display: block;
-}*/
 
 
 
